# lppc

./: CLAUDE.md  README.md
.claude/agents/: security-reviewer.md  software-architect.md
.claude/rules/: dependency-check.md
.claude/skills/create-spec/: SKILL.md
.claude/skills/depcheck/: SKILL.md
.claude/skills/implement/: SKILL.md
.github/workflows/: release.yaml  release.yml  test-lppc-cli.yaml  test-lppc-cli.yml  test-mapping-creator.yaml
lppc-cli/: Cargo.toml  README.md
lppc-cli/specs/: architecture.md  backlog.md  brainstorming.md
lppc-cli/src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
lppc-cli/src/mapping/: cache.rs  loader.rs  matcher.rs  mod.rs  repository.rs  schema.rs  yaml_parser.rs
lppc-cli/src/output/: formatter.rs  hcl.rs  json.rs  mod.rs  plain.rs
lppc-cli/src/terraform/: hcl_parser.rs  json_types.rs  mod.rs  model.rs  module_detector.rs  parser.rs  plan.rs  provider.rs  runner.rs
lppc-cli/tests/: integration.rs
lppc-cli/tests/integration/: cli_tests.rs
mapping-creator/: Cargo.toml  README.md
mapping-creator/specs/: architecture.md  brainstorming.md
mapping-creator/src/: action.rs  block_type.rs  cli.rs  generator.rs  main.rs  provider_versions.rs  schema.rs  service.rs  ui.rs
