[package]
name = "lppc-mapping-creator"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI tool for creating LPPC mapping files"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.30"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
