[package]
name = "lppc-mapping-creator"
version = "0.1.0"
edition = "2024"
description = "Interactive CLI tool for creating LPPC mapping files"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui = "0.30.0"
crossterm = "0.29.0"
ureq = "3.2.0"
saphyr = "0.0.6"
dirs = "6.0.0"
chrono = { version = "0.4.43", features = ["serde"] }

[dev-dependencies]
tempfile = "3.25.0"
